# data-prep-tool

./: .cursorrules  .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CODEX.md  README.md  pyproject.toml
.claude/skills/: pr-summary-and-commit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: chore-task.md  docs-task.md  implementation-task.md
.github/workflows/: ci-security.yml  ci.yml
docs/: AI_RULES.md  becareful-for-generic-agents.md  data-handling-policy.md
docs/ai/: AI_RULES.md  CONTEXT_SNAPSHOT_latest.md  MULTI_AGENT_REVIEW_PROTOCOL.md  README.md  REQUEST_PACKAGING_CONTRACT.md  REVIEW_MODE_PROTOCOL.md  TASK_CONTRACT.md
docs/ai/generators/: PROMPT_create_green_to_refactor_handoff.md  PROMPT_create_red_to_green_handoff.md  README.md
docs/ai/prompts/: PROMPT_md_output.md
docs/ai/skills/: SKILL_WORKFLOW.md
docs/ai/templates/: CONTEXT_SNAPSHOT_TEMPLATE.md  GREEN_TO_REFACTOR_HANDOFF_TEMPLATE.md  README.md  RED_TO_GREEN_HANDOFF_TEMPLATE.md  design_request.md  review_request.md
docs/architecture/: AUTHORITY_ORDER.md
docs/archive/initial-import/: ANTIGRAVITY.md  ARCHITECTURE_PRINCIPLES.md  CODEX.md  ENGINEERING_PRACTICES.md  TASK_CONTRACT.md  becareful-for-generic-agents.md
docs/prompts/: README.md  metadata_generator.md  resolution_prompt_template.md  review_prompt_template.md  verification_prompt_template.md
docs/review/: README.md
docs/review/template/: framing_contract.yaml  review_record.yaml  validation_record.yaml  verification_record.yaml
scripts/: qa.sh
tests/: test_placeholder.py
(+21 files in other folders)
