[project]
name = "data-prep-tool"
version = "0.1.0"
description = "Test data preparation tool for household decision-support system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=8.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.5",
  "bandit>=1.7.9",
  "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
files = ["src/data_prep_tool", "tests"]

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

pretty = true
show_error_codes = true
ignore_missing_imports = false
